--- a/package.json
+++ b/package.json
@@ -6,36 +6,31 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib dist coverage",
-    "lint": "eslint .",
-    "prepublish": "npm-run-all clean build"
+    "test": "csc",
+    "prepublish": "npm-run-all test clean build"
   },
   "peerDependencies": {
     "react": "*",
     "react-dom": "*"
   },
   "dependencies": {
-    "fbjs": "^0.8.3",
+    "fbjs": "^0.8.4",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
-    "redux-slider-monitor": "^1.0.6"
+    "redux-slider-monitor": "^1.0.7"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-eslint": "^6.1.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-cli": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.10.0",
-    "eslint-plugin-jsx-a11y": "^1.5.3",
-    "eslint-plugin-react": "^5.2.2",
-    "npm-run-all": "^2.3.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "rimraf": "^2.5.2"
+    "babel-register": "^6.14.0",
+    "csc": "0.1.0",
+    "npm-run-all": "^3.0.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "rimraf": "^2.5.4"
   },
   "repository": "ratson/redux-devtools-preset",
   "license": "MIT",
@@ -44,5 +39,11 @@
     "LICENSE",
     "lib",
     "src"
-  ]
+  ],
+  "xo": {
+    "env": ["browser"],
+    "rules": {
+      "react/jsx-filename-extension": "off"
+    }
+  }
 }
